--- a/mysite/frontend/src/components/Header.css
+++ b/mysite/frontend/src/components/Header.css
@@ -2,6 +2,7 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     padding: 0.5em;
 
 }
@@ -51,4 +52,16 @@ nav {
     padding: 0.25em;
     background-color: aqua;
     font-weight: 600;
+}
+
+.profile-container {
+    margin: 0;
+}
+
+.profile-icon {
+    width: 2em;
+    height: 2em;
+    background-color: black;
+    border-radius: 1em;
+    margin: 0;
 }
