--- a/mysite/frontend/src/App.css
+++ b/mysite/frontend/src/App.css
@@ -17,3 +17,9 @@ h2 {
     font-family: montserrat;
     font-weight: 800;
 }
+
+.error-message {
+    padding: 1em;
+    margin: 1em;
+    color: red;
+}
