--- a/mysite/frontend/src/components/Header.css
+++ b/mysite/frontend/src/components/Header.css
@@ -39,9 +39,6 @@ nav {
     background-color: rgb(78, 78, 201);
 }
 
-.search-bar {
-
-}
 
 .search-bar input[type=search] {
     padding: 0.25em;
@@ -54,8 +51,23 @@ nav {
     font-weight: 600;
 }
 
-.profile-container {
+.profile-container-open {
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: white;
+    border: 1px solid black;
+    box-shadow: -3px 3px 33px -9px black;
+    z-index: 1;
+    padding: 1em;
+    opacity: 1;
+}
+
+.profile-container-open > * {
+    margin-bottom: 1em;
 }
 
 .profile-icon {
