--- a/mysite/frontend/src/App.css
+++ b/mysite/frontend/src/App.css
@@ -3,23 +3,368 @@
     src: url(./assets/Montserrat/Montserrat-VariableFont_wght.ttf);
 }
 
+:root {
+    --color-error: red;
+    --color-nav: black;
+    --color-highlight: rgb(35, 35, 218);
+    --color-highlight-hover: rgb(109, 109, 226);
+
+    --color-dark: black;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-body {
-    margin: 1em;
-}
-
-h2 {
+h1,
+h2,
+h3 {
     font-family: montserrat;
     font-weight: 800;
 }
 
+main {
+    margin: 1em;
+}
+
+.accordion-item .media-grid {
+    display: none;
+}
+
+.accordion-item-open .media-grid {}
+
+
+
 .error-message {
     padding: 1em;
     margin: 1em;
-    color: red;
+    color: var(--color-error);
+}
+
+#error-content {
+    margin: 2em;
+}
+
+
+.movie-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 1em;
+}
+
+.media-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 1em;
+    margin-bottom: 1em;
+    gap: 1em;
+
+    width: 100%;
+}
+
+video {
+    max-width: 100%;
+    max-height: 80vh;
+}
+
+.show-container {}
+
+
+
+
+.season-header {
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
+    padding: 0.5em;
+    margin: 0.5em;
+    align-items: center;
+}
+
+.symbol {
+    font-size: 40px;
+    font-weight: 1000;
+}
+
+.symbol:hover {
+    cursor: pointer;
+    transform: scale(1.5) translate(-1px, -1px);
+}
+
+.media-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    gap: 1em;
+}
+
+.episode-container {}
+
+.watchlist-button,
+.watchlist-button-selected {
+    padding: 0.5em 1em 0.5em 1em;
+    border-radius: 1em;
+}
+
+.watchlist-button-selected,
+.watchlist-button:hover {
+    background-color: var(--color-highlight);
+    color: white;
+    cursor: pointer;
+}
+
+.watchlist-button,
+.watchlist-button-selected:hover {
+    background-color: var(--color-dark);
+    color: white;
+}
+
+
+.watchlist-media-container {
+    margin: 1em;
+}
+
+
+
+.carousel-container {
+    margin: 1em 0 1em 0;
+    padding-bottom: 1em;
+    box-shadow: 0px 0px 6px 6px rgba(189, 189, 189, 0.4);
+}
+
+
+
+.carousel-item {
+    position: relative;
+    margin: 0.25em 0.5em 0.25em 0.5em;
+}
+
+
+.carousel-item:hover {
+    box-shadow: 0px 0px 4px 4px rgba(196, 112, 112, 0.5);
+}
+
+
+.carousel-item a {
+    display: block;
+}
+
+
+.carousel-header {
+    padding: 1em 1em 1em 1em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid black;
+    margin-bottom: 1em;
+}
+
+.see-all-link {
+    text-decoration: none;
+    font-size: large;
+    font-weight: 800;
+    border: 1px solid black;
+    padding: 1em;
+}
+
+.see-all-link:hover {
+    font-size: 120%;
+}
+
+
+#main-element .control-arrow {
+    background-color: rgb(82, 82, 82);
+    opacity: 0.7;
+    height: 80%;
+    margin: auto;
+    border-radius: 10px 0 0 10px;
+}
+
+#main-element .control-arrow:hover {
+    opacity: 1;
+}
+
+
+nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5em;
+    background-color: var(--color-nav);
+}
+
+.icon {
+    padding: 0 1em 0 1em;
+}
+
+.icon a {
+    border: 2px solid white;
+    color: var(--color-highlight);
+    border-radius: 1em;
+    padding: 10px;
+    font-size: 30px;
+    font-family: fantasy;
+    text-decoration: none;
+    display: block;
+}
+
+.show-watchlist-button {
+    padding: 1em;
+    text-decoration: none;
+    background-color: var(--color-highlight);
+    color: white;
+}
+
+.buttons,
+.user {
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
+}
+
+.form-container-inner {
+    box-shadow: -2em -2em 2em 2em rgba(0, 0, 0, 0.4);
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    background-color: white;
+}
+
+.form-container form {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    justify-content: center;
+    align-items: center;
+    padding: 2em;
+}
+
+.input-normal {
+    padding: 0.5em;
+    display: block;
+}
+
+
+.close-button {
+    background-color: var(--color-highlight);
+    color: white;
+    padding: 1em;
+    cursor: pointer;
+}
+
+.close-button:hover {
+    background-color: var(--color-highlight-hover);
+}
+
+.submit-button {
+    padding: 1em;
+    background-color: var(--color-highlight);
+    color: white;
+}
+
+.submit-button:hover {
+    background-color: var(--color-highlight-hover);
+    cursor: pointer;
+}
+
+.auth-button {
+    padding: 0.5em 1em 0.5em 1em;
+    border: 1px solid black;
+    background-color: var(--color-highlight);
+    color: white;
+    border-radius: 5px;
+}
+
+.auth-button:hover {
+    background-color: var(--color-highlight-hover);
+    cursor: pointer;
+}
+
+
+.search-bar input[type=search] {
+    padding: 0.25em;
+    margin-right: 0.25em;
+}
+
+.search-bar input[type=submit] {
+    padding: 0.25em;
+    background-color: aqua;
+    font-weight: 600;
+}
+
+#search-submit {
+    color: white;
+    background-color: var(--color-highlight);
+}
+
+#search-submit:hover {
+    background-color: var(--color-highlight-hover);
+}
+
+.profile-container-open {
+    margin: 0;
+    display: flex;
+    gap: 1em;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: white;
+    border: 1px solid black;
+    box-shadow: -3px 3px 33px -9px black;
+    z-index: 5;
+    padding: 1em;
+    opacity: 1;
+}
+
+.search-results {
+    position: absolute;
+    background-color: white;
+}
+
+.search-result {
+    padding: 1em;
+} 
+
+
+.profile-container-open>* {
+    margin-bottom: 1em;
+}
+
+.profile-icon {
+    width: 2em;
+    height: 2em;
+    background-color: white;
+    border-radius: 1em;
+    margin: 0;
+    cursor: pointer;
+}
+
+.profile-container-open .profile-icon {
+    background-color: black;
+    align-self: flex-end;
+}
+
+
+
+@media screen and (min-width: 600px) {
+    .media-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .media-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
